web/css/site.css
html,
body {
    height: 100%;
    background: #8fca58;
    font-family: Ubuntu, Helvetica Neue, Helvetica, Arial, sans-serif;
    line-height: 1.5;
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

.wrap > .container {
    padding: 0 15px 20px;
}

.footer {
    text-align: center;
    color: #000;
}

.footer a,
.footer a:hover {
    color: #000;
}

.hljs {
    background: none !important;
}

pre {
    background: none;
    border: none;
    font-size: 14px;
}

/* Posts */

.content_footer {
    border-top: solid 1px #DDD;
    padding-top: 5px;
    font-size: 11px;
    color: #7B848D;
}

.content_footer .fa {
    margin: 0 5px 0 10px;
}

.content_header {
    margin-bottom: 20px;
    font-size: 11px;
    color: #7B848D;
}

.content_header .fa {
    margin: 0 5px 0 10px;
}

.share {
    border: 1px dashed #444953;
    font-size: 120%;
    margin: 20px auto 10px;
    padding: 10px;
    text-align: center;
}

.post-view {
    margin-top: 20px;
    background: #FFF;
    padding: 0 20px 10px 20px;
    border-radius: 10px;
    border: solid 1px #fff;
    overflow-wrap: break-word;
}

.post-view h1 a,
.post-view h2 a,
.post-view h3 a,
.post-view h4 a {
    text-decoration: none;
}

.post-view a {
    color: #3fa41a;
}

.post-view h1 {
    color: #3fa41a;
    border-bottom: 1px solid #3fa41a;
    padding-bottom: 3px;
}

.post-view h2, .post-view h3, .post-view h4 {
    color: #3fa41a;
    border-bottom: 1px dotted #3fa41a;
    padding-bottom: 3px;
}

.post-view .index_title h3 {
    font-size: 24px;
    color: #3fa41a;
    border-bottom: 1px solid #3fa41a;
    padding-bottom: 3px;
}

.post-view .index_title h3 a {
    color: #3fa41a;
    text-decoration: none;
}

.post-view .index_title h3 {
    font-size: 24px;
    color: #3fa41a;
    border-bottom: 1px solid #3fa41a;
    text-decoration: none;
    padding-bottom: 3px;
}

.post-view .index_title h3 a {
    color: #3fa41a;
    text-decoration: none;
}

.post-view .index_title h3 a {
    color: #3fa41a;
    text-decoration: none;
}

.post-view img {
    max-width: 100%;
}

.text-primary {
    color: #4F5B93;
    border-bottom: none !important;
}

.not-set {
    color: #C55;
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
    content: /*"\e113"*/ "\e151";
}

a.desc:after {
    content: /*"\e114"*/ "\e152";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view th {
    white-space: nowrap;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #A94442;
    background: #FDF7F7;
    border-left: 3px solid #EED3D7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

.header_container {
    background: #3f8701;
    height: 30px;
}

.header_logo {
    position: absolute;
    top: 13px;
    z-index: 1;
}

.navbar-inverse {
    background: #3f8701;
    border: none;
    border-radius: 0;
}

.navbar-brand {
    text-decoration: none;
}

.navbar-inverse .navbar-brand {
    color: #fff;
}

.navbar-inverse .navbar-brand span {
    color: #fff;
}

.navbar-inverse .navbar-nav > li > a {
    color: #FFF;
    text-decoration: none;
}

.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
    background-color: #8fca58;
}

.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
    background-color: #8fca58;
}

.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
    background-color: #8fca58;
}

/* Pagination */

.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
    background: #8fca58;
    border-color: #ddd;
}

.pagination > li > a, .pagination > li > span {
    color: #8892BF;
}

.nav li > form > button.logout {
    padding: 15px;
    border: none;
}

@media (max-width: 767px) {
    .nav li > form > button.logout {
        display: block;
        text-align: left;
        width: 100%;
        padding: 10px 15px;
    }
}

.nav > li > form > button.logout:focus,
.nav > li > form > button.logout:hover {
    text-decoration: none;
}

.nav > li > form > button.logout:focus {
    outline: none;
}

/* Comments */

.comment-body {
    background: #F5F5F5;
    border-radius: 5px;
    padding: 20px 20px 20px;
}

ul.comments li {
    clear: both;
    padding: 10px 0 0 115px;
}

@media screen and (max-width: 768px) {

    ul.comments li {
        padding: 10px 0;
    }

    .comment-user-photo {
        display: none;
    }

    .post-view .index_title h3, .post-view .index_title h3 a {
        border: none;
    }

}

@media screen and (max-width: 320px) {

    .widget,
    .breadcrumb {
        display: none;
    }

    .post-filter {
        padding-left: 0;
        text-align: center;
    }

}

.comment-user-photo {
    float: left;
    padding: 5px;
    margin-left: -115px;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 4px;
}

ul.comments .comment-arrow {
    border-bottom: 15px solid transparent;
    border-right: 15px solid #F4F4F4;
    border-top: 15px solid transparent;
    height: 0;
    left: -15px;
    position: absolute;
    top: 28px;
    width: 0;
}

.comment-permament-link {
    float: right;
}

.dt-published {
    color: #888;
    font-size: 0.8em;
}

.comment-username {
    border-bottom: 1px solid #DDD;
    margin: 5px 0;
    padding: 0 0 3px;
}

.comment-actions .fa {
    padding-left: 10px;
    padding-right: 4px;
}

.CodeMirror {
    border: 1px solid #DDD;
    padding: 20px;
    color: #333;
    font-family: "Noto Serif", serif;
    font-weight: 400;
    font-size: 17px;
    line-height: 1.6471;
    vertical-align: baseline;
}

h3.comment-box__title {
    border-bottom: none;
}

.widget {
    margin-top: 20px;
    padding: 0 20px 15px 20px;
    border-radius: 7px;
    background: #fff;
    box-shadow: 1px 1px 2px #aaa;
}

.widget-title {
    margin-bottom: 20px;
    font-size: 16px;
    color: #fff;
    padding: 10px 0;
    border-bottom: solid 2px #fff;
    text-align: center;
    background: #8fca58;
    border-bottom-right-radius: 7px;
    border-bottom-left-radius: 7px;
}

.widget-content__social-icons {
    font-size: 30px;
}

.widget a,
.widget-content__social-icons a {
    color: #8fca58;
}

.widget a:hover,
.widget-content__social-icons a:hover {
    color: #3fa41a;
}

.site-about,
.post-admin,
.post-create,
.post-update,
.post-my,
.user-index,
.comment-index,
.site-signup,
.site-login,
.site-request-password-reset,
.site-contact,
.category-create,
.category-update,
.category-admin,
.site-contact,
.user-index,
.user-update,
.site-search,
.deals-admin,
.deals-create,
.deals-update,
.forum-admin,
.forum-create,
.forum-update{
    background: #FFF;
    padding: 0 20px 10px 20px;
    border-radius: 10px;
    border: solid 1px #fff;
}

.site-about a {
    color: #8fca58;
}

.user-view {
    background: #fff;
    padding: 20px 20px 10px 20px;
    border-radius: 10px;
    border: solid 1px #fff;
}

.breadcrumb {
    background: none;
}

.breadcrumb .active,
.breadcrumb a,
.breadcrumb a:hover {
    color: #000;
}

.author_support {
    width: 120px;
    height: 60px;
    border: 0;
    padding: 0;
    overflow: hidden;
    display: block;
    margin: 0 auto;
}

.author_support_hint {
    display: none;
    color: #C55;
    font-style: italic;
    text-align: center;
}

.post-filter {
    list-style: none;
    display: flex;
    justify-content: space-around;
}

.post-filter li {
    padding: 12px 16px 8px 16px;
    color: #fff;
}

.post-filter a {
    color: #fff;
    text-decoration: underline;
}

.post-filter a:hover {
    text-decoration: none;
}

.post-filter li .fa {
    margin-right: 10px;
}

.site-search {
    margin-top: 20px;
    background: #FFF;
    padding: 0 20px 10px 20px;
    border-radius: 10px;
    border: solid 1px #DCDCDC;
}

